tests/fail/password.stderr
error: expected `prompt` , `confirmation` , `mismatch` , `validate_with`
 --> tests/fail/password.rs:8:9
  |
8 |         confirm = "Enter your password again:",
  |         ^^^^^^^

error[E0599]: no function or associated item named `asker` found for struct `User` in the current scope
  --> tests/fail/password.rs:17:22
   |
5  | struct User {
   | ----------- function or associated item `asker` not found for this struct
...
17 |     let user = User::asker()
   |                      ^^^^^ function or associated item not found in `User`
